style.css
/* ... */
/* LANDING */

#landing {
  padding: 0 32px;
}

nav {
  display: flex;
  margin-top: 32px;
}

.nav__row {
  display: flex;
  justify-content: space-between;
}

.nav__logo {
  display: flex;
  align-items: center;
}

.nav__logo--title {
  font-weight: bold;
  font-size: 36px;
}


.nav__logo--image {
  margin-right: 16px;
  width: 70px;
}

img {
  width: 100%;
}

.nav__links {
  display: flex;
  align-items: center;
}

.nav__link {
  color: black;
  padding: 0 8px;
  font-weight: bold;
  margin: 0 24px;
  font-size: 20px;
  transition: all 300ms;
  position: relative;
}

.nav__link::after {
  content: "";
  position: absolute;
  left: 0px;
  bottom: -6px;
  height: 2px;
  width: 100%;
  background: #6415ff;
  opacity: 0;
  transition: all 300ms;
}

.nav__link:hover {
  color: #6415ff;
}

.nav__link:hover::after {
  opacity: 1;
}

.login {
  margin: 0 24px 0 48px;
}

.nav__link--primary {
  background-color: blue;
  color: white;
  padding: 10px 32px;
  border-radius: 9999px;
  margin: 0;
}

.nav__link--primary::after {
  content: "";
  width: 0;
  height: 0;
}

.btn__menu {
  display: none;
  background: transparent;
  border: none;
  transition: all 300ms ease;
}

.btn__menu--svg:hover {
  filter: invert(26%) sepia(94%) saturate(7476%) hue-rotate(261deg) brightness(94%) contrast(115%);
}

.modal {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 378px;
  margin: 24px 16px;
  padding: 32px;
  background-color: #fff;
  border: 1px solid rgb(229, 231, 235);
  border-radius: 8px;
  z-index: 101;
  visibility: hidden;
  opacity: 0;
  transform: translate(300%);
  transition: all 300ms ease;
}

.modal__links {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.modal__link {
  color: #1a202c;
  font-size: 18px;
  font-weight: bold;
  line-height: 1.5;
  margin: 8px 0;
  padding-bottom: 2px;
  border-bottom: 2px solid transparent;
}

.modal__link--primary {
  color: #f7fafc;
  padding: 12px 32px;
  background: #6415ff;
  border-radius: 500px;
}

.menu--open .modal {
  visibility: visible;
  opacity: 1;
  transform: translateX(0);
}

.btn__menu--close {
  position: fixed;
  top: 24px;
  right: 18px;
}

/* HEADER */

header,
.row {
  display: flex;
  margin: 0 auto;
}

.header__blob {
  position: absolute;
  left: 0;
  bottom: 0;
  opacity: 0.05;
  width: 256px;
  height: 256px;
  transform: matrix(1, 0, 0, 1, -163, 0);
}

.header__description {
  width: 41.66667%;
}

.header__description--title {
  font-weight: bold;
  font-size: 64px;
  line-height: 1.25;
}

.header__description--para {
  margin: 32px 0;
  padding-right: 12px;
}

.header__img--wrapper {
  width: calc(100% - 41.6667%);
}

.header__customers {
  margin-top: 16px;
  padding-right: 128px;
  opacity: 0.5;
}

.header__customers--title {
  margin-top: 80px;
  color: gray;
  font-weight: bold;
  opacity: 0.5;
  font-size: 15px;
}

.header__img {
  width: 100%;
}

.header__email {
  width: 100%;
  max-width: 550px;
  height: 84px;
  position: relative;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  margin-top: 88px;
}

.header__email--input {
  padding: 34px 192px 34px 32px;
  border-radius: 500px;
  width: 100%;
  border: 2px solid rgb(229, 231, 235);
  color: rgb(36, 62, 99);
  font-size: 20px;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 1;
  transition: all 300ms ease;
}

.header__email--input:hover {
  border-color: rgba(160, 174, 192);
}

.header__email--button {
  position: absolute;
  z-index: 2;
  margin: 8px 10px;
  height: calc(100% - 16px);
  border-radius: 500px;
  width: 185px;
  border: none;
  color: white;
  font-weight: bold;
  font-size: 24px;
  background-color: #6415ff;
  transition: all 300ms ease;
}

.header__email--button:hover {
  background-color: rgba(60, 13, 153);
}

/* FEATURES */

#features {
  position: relative;
}

#features .row__narrow {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.row__narrow {
  width: 100%;
  max-width: 1300px;
  margin: 0 auto;
}

.features {
  display: flex;
  flex-wrap: wrap;
  margin-top: 40px;
  justify-content: space-between;
}

.feature {
  width: calc(100% / 3);
}

.feature__row {
  display: flex;
  align-items: flex-start;
  padding: 32px 24px;
}

.feature__img--wrapper {
  display: flex;
  padding: 20px;
  border: 1px solid #e5e7eb;
  border-radius: 500px;
}

#features .section__para {
  text-align: center;
  max-width: 700px;
}

.feature__img {
  width: 32px;
  height: 32px;
}

.feature__text {
  margin: 8px 0 0 16px;
}

.feature__title {
  line-height: 1;
  font-size: 36px;
}

.feature__para {
  margin-top: 16px;
  font-size: 18px;
  max-width: 250px;
  color: rgb(124, 139, 161);
  line-height: 2;
  font-weight: bold;
}

.features__blob {
  transform: translateX(96px) translateY(192px) scaleX(1) scaleY(1);
  position: absolute;
  right: 0px;
  bottom: 0px;
  width: 16rem;
  opacity: 0.25;
  padding: 16px;
}

/* QUALITY */

#quality .btn {
  margin-top: 32px;
}

.quality__description {
  max-width: 577px;
  margin-right: 70px;
}

#quality .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.quality__img--wrapper {
  border-radius: 4px;
  border: 1px solid rgb(229, 231, 235);
  position: relative;
  margin: 0 60px;
  z-index: 2;
  display: flex;
}

.quality__img {
  z-index: 1;
}

.quality__grid {
  transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
  width: 80px;
  height: 80px;
  position: absolute;
  right: 0px;
  bottom: 0px;
  --tw-text-opacity: 1;
  fill: rgba(100, 21, 255,var(--tw-text-opacity));
  z-index: 0;
  display: block;
}

.quality__description,
.quality__img--wrapper {
  width: 50%;
}

/* STEPS */

#steps .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.steps__description {
  padding: 32px 0;
  padding-left: 64px;
}

.step {
  display: flex;
  align-items: flex-start;
  margin-top: 32px;
}

.steps__img--wrapper {
  display: flex;
  position: relative;
}
/* ... */

